--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@hookform/resolvers": "^5.2.2",
     "@tanstack/react-query": "^5.90.5",
     "@tonconnect/ui-react": "^2.3.1",
+    "canvas-confetti": "^1.9.4",
     "i18next": "^25.6.0",
     "i18next-browser-languagedetector": "^8.2.0",
+    "lottie-web": "^5.13.0",
+    "lucide-react": "^0.548.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
@@ -24,6 +27,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
