feat: 资产页深度重构 - TAI 财务中心终锁
- 重命名：RedPacket → Assets，路由 /red-packet → /assets
- 新建 AssetHeader：TAI 余额 + useCountUp 滚动 + 实时汇率 + 24h 变化
- 新建 FinanceSections：我的红包/称谓/头像/历史预测（玻璃卡片 + 空态）
- 新建 ActionBar：创建预测/领取红包/查看榜单（触觉反馈 + 发光环）
- 新建 hooks：useAssetData/useTAIPrice/useHistory（Mock → 真实 API）
- 国际化：assets.json（中英双语）+ EmptyState 支持 avatar 类型
- 视觉：玻璃质感 + 发光文字 + hover 发光环 + 响应式布局
- 终端：npm run lint && npm run build 0 error

--- a/public/tonconnect-manifest.json
+++ b/public/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
   "url": "https://example.com",
   "name": "Taizhunle",
-  "iconUrl": "https://example.com/icon.png"
+  "iconUrl": "https://example.com/logo.jpg"
 }
