--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-hook-form": "^7.65.0",
     "react-i18next": "^16.2.0",
     "react-router-dom": "^7.9.4",
+    "recharts": "^3.3.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
