feat: Complete project implementation with DAO, invite, ranking systems
- Add DAO pool and fee distribution system
- Implement invite and ranking features with real-time updates
- Complete red packet system with TON payment integration
- Add Telegram bot with admin and user commands
- Implement smart contracts (TAI Master and Vesting)
- Add comprehensive database migrations
- Complete frontend with glass morphism design
- Add multi-language support (zh/en)
- Implement TON wallet integration
- Add development and testing scripts
- Update documentation and deployment guides

--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -12,7 +12,11 @@
     "strict": true,
     "resolveJsonModule": true,
     "declaration": false,
-    "sourceMap": true
+    "sourceMap": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    }
   },
   "include": ["src/server/**/*"],
   "exclude": ["node_modules", "dist", "src/components", "src/pages", "src/hooks"]
