--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,25 @@ dist
 coverage
 .idea
 .vscode
+
+# Environment variables and secrets
 .env
+.env.local
+.env.production
+.env.*.local
+
+# Private keys and sensitive data
+*.pem
+*.key
+*.p12
+*.pfx
+addresses.json
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
