--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build:server": "tsc -p tsconfig.server.json",
     "start": "node dist/server/main.js",
     "lint": "eslint .",
+    "test": "vitest run",
     "preview": "vite preview",
     "deploy": "npm run build && vercel --prod",
     "db:reset": "npx supabase db reset --local",
@@ -76,6 +77,7 @@
     "tsx": "^4.20.6",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
-    "vite": "^7.1.7"
+    "vite": "^7.1.7",
+    "vitest": "^2.1.4"
   }
 }
