feat: sync local updates

--- a/.env.example
+++ b/.env.example
@@ -101,6 +101,7 @@ PREDICTION_FEE_RATE=0.05
 PREDICTION_CREATOR_FEE=0.015
 PREDICTION_REFERRAL_FEE=0.015
 PREDICTION_PLATFORM_FEE=0.02
+ENFORCE_CREATION_BALANCE=false
 
 # 申诉系统
 APPEAL_DEPOSIT_AMOUNT=1000000
