--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
     "dev:client": "vite --host 0.0.0.0 --port 5173",
-    "dev:server": "tsx watch src/server/main.ts",
+    "dev:server": "tsx watch --env-file=.env src/server/main.ts",
     "build": "tsc -b && vite build && tsc -p tsconfig.server.json",
     "build:client": "tsc -b && vite build",
     "build:server": "tsc -p tsconfig.server.json",
@@ -28,6 +28,7 @@
     "@tanstack/react-query": "^5.90.5",
     "@ton/core": "^0.62.0",
     "@tonconnect/ui-react": "^2.3.1",
+    "buffer": "^6.0.3",
     "canvas-confetti": "^1.9.4",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
@@ -48,6 +49,8 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@eslint/js": "^9.36.0",
     "@types/canvas-confetti": "^1.9.0",
     "@types/cors": "^2.8.19",
@@ -73,11 +76,13 @@
     "globals": "^16.4.0",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "tailwindcss": "^3.4.15",
     "tsx": "^4.20.6",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
     "vite": "^7.1.7",
+    "vite-plugin-node-polyfills": "^0.24.0",
     "vitest": "^2.1.4"
   }
 }
