feat: complete TypeScript fixes, contract deployment, and Cloudflare setup

--- a/.env.example
+++ b/.env.example
@@ -53,7 +53,6 @@ JWT_SECRET=your-jwt-secret-key
 # ⛓️ TON 区块链配置
 # ===========================================
 # 网络配置
-TON_NETWORK=testnet
 TON_API_ENDPOINT=https://testnet.toncenter.com/api/v2/
 TON_API_KEY=your-ton-api-key
 
@@ -62,11 +61,26 @@ TON_API_KEY=your-ton-api-key
 # TON_API_ENDPOINT=https://toncenter.com/api/v2/
 # TON_API_KEY=your-mainnet-api-key
 
+# TON Contract Addresses
+TAI_UNLOCK_CONTROLLER=
+PREDICTION_MARKET_CONTRACT=
+JUROR_STAKING_CONTRACT=
+TAI_ORACLE_CONTRACT=
+
+# TON Treasury Addresses
+TON_TREASURY_ADDRESS=
+TON_WHITELIST_TREASURY=
+UNLOCK_TREASURY=
+USDC_MASTER_ADDRESS=
+
+# Toncenter RPC
+TONCENTER_API_KEY=
+TON_NETWORK=testnet
+
 # 合约地址
 TAI_TOKEN_CONTRACT=EQD...your-tai-contract-address
 VESTING_CONTRACT=EQD...your-vesting-contract-address
 REDPACKET_CONTRACT=EQD...your-redpacket-contract-address
-TAI_UNLOCK_CONTROLLER=EQD...your-unlock-controller-address
 
 # 钱包配置
 PLATFORM_WALLET_ADDRESS=UQD...your-platform-wallet
@@ -110,11 +124,6 @@ PREDICTION_CREATOR_FEE=0.015
 PREDICTION_REFERRAL_FEE=0.015
 PREDICTION_PLATFORM_FEE=0.02
 ENFORCE_CREATION_BALANCE=false
-
-# 智能合约地址
-PREDICTION_MARKET_CONTRACT=EQD...your-prediction-market
-JUROR_STAKING_CONTRACT=EQD...your-juror-staking
-TAI_ORACLE_CONTRACT=EQD...your-tai-oracle
 
 # 申诉系统
 APPEAL_DEPOSIT_AMOUNT=1000000
