--- a/contracts/package.json
+++ b/contracts/package.json
@@ -6,18 +6,29 @@
   "scripts": {
     "compile": "tact --config tact.config.json",
     "compile:watch": "tact --config tact.config.json --watch",
-    "test": "vitest --run"
+    "test": "vitest --run",
+    "deploy": "npx blueprint run"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@tact-lang/compiler": "^1.6.13",
     "@ton-community/func-js": "^0.11.0",
+    "@ton/blueprint": "^0.41.0",
+    "@ton/core": "^0.59.0",
+    "@ton/crypto": "^3.3.0",
     "@ton/sandbox": "^0.21.0",
     "@ton/test-utils": "^0.12.0",
     "@ton/tolk-js": "^1.1.0",
-    "tact": "^1.6.13",
+    "@ton/ton": "^15.0.0",
     "vitest": "^1.6.0"
+  },
+  "dependencies": {
+    "@ton/core": "^0.59.0",
+    "@ton/crypto": "^3.3.0",
+    "@ton/ton": "^15.0.0",
+    "dotenv": "^16.6.1"
   }
 }
