--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@supabase/supabase-js": "^2.76.1",
-    "@tanstack/react-query": "^5.90.5",
+    "@tanstack/react-query": "5.28.0",
     "@ton/core": "^0.62.0",
     "@tonconnect/ui-react": "^2.3.1",
     "buffer": "^6.0.3",
@@ -37,9 +37,12 @@
     "date-fns": "^3.6.0",
     "dotenv": "^17.2.3",
     "express": "^4.21.2",
+    "express-rate-limit": "^8.2.1",
+    "grammy": "^1.34.0",
     "helmet": "^8.1.0",
     "i18next": "^25.6.0",
     "i18next-browser-languagedetector": "^8.2.0",
+    "ioredis": "^5.8.2",
     "lottie-web": "^5.13.0",
     "lucide-react": "^0.548.0",
     "node-cron": "^3.0.3",
@@ -47,13 +50,14 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
-    "react-i18next": "^16.2.0",
+    "react-i18next": "14.1.0",
     "react-router-dom": "^7.9.4",
     "recharts": "^3.3.0",
-    "zod": "^4.1.12",
+    "zod": "3.23.8",
     "zustand": "^4.5.7"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20250204.0",
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@eslint/js": "^9.36.0",
@@ -61,6 +65,7 @@
     "@types/canvas-confetti": "^1.9.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.4",
+    "@types/ioredis": "^4.28.10",
     "@types/node": "^24.6.0",
     "@types/node-cron": "^3.0.11",
     "@types/node-telegram-bot-api": "^0.64.12",
