--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@supabase/supabase-js": "^2.76.1",
-    "@tanstack/react-query": "5.28.0",
+    "@tanstack/react-query": "^5.62.0",
     "@ton/core": "^0.62.0",
     "@tonconnect/ui-react": "^2.3.1",
     "buffer": "^6.0.3",
